old/6-Monitoring/grafana/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.internal.carlosedp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
